--- a/src/app/components/pages/home/elements/product/element.scss
+++ b/src/app/components/pages/home/elements/product/element.scss
@@ -1,9 +1,73 @@
 .products .element {
     position: relative;
-    
-    background-color: rgba($color: #000000, $alpha: .6);
+    display: block;
+    margin-right: 14.5%;
+    height: 115px;
+    margin-bottom: 42px;
+    clip-path: polygon(12% 0, 100% 0, 100% 62%, 89% 100%, 0 100%, 0 40%);
+
+    .bg {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        z-index: -1;
+
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 
     .context {
+        position: absolute;
+        left: 42px;
+        bottom: 20px;
+        z-index: 1;
+        overflow: hidden;
+
+        span {
+            font-size: 18px;
+            letter-spacing: 0.03em;
+            color: white;
+            margin: 0 0 12px;
+        }
+
+        a {
+            font-size: 16px;
+            letter-spacing: 0.03em;
+            color: white;
+        }
+    }
+
+    &:before {
+        position: absolute;
+        content: '';
+
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+
+        opacity: 0.7;
+        z-index: 0;
         
+        background-color: $mainColorMiddle;
+
+        transition: all .3s ease;
+    }
+
+    &:after {
+        position: absolute;
+        content: '';
+        
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+
+    &:hover {
+        &:before {
+            background-color: $mainColorDark;
+        }
     }
 }
