--- a/src/app/components/pages/home/elements/licences/licences.scss
+++ b/src/app/components/pages/home/elements/licences/licences.scss
@@ -8,6 +8,16 @@
 
     .gerb-bg {
         position: absolute;
+        left: 7%;
+        top: 7%;
+        bottom: 7%;
+        width: 100%;
+        z-index: 0;
+
+        background-image: url("/images/gerb_logo.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        opacity: .3;
     }
 
     .block:last-child {
@@ -33,6 +43,49 @@
             line-height: 1.5em;
 
             margin-bottom: 42px;
+        }
+    }
+
+    .licences-images {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+
+        & > .licence-image {
+            position: absolute;
+            display: block;
+            width: 240px;
+            height: 100%;
+            
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            box-shadow: 9px 4px 14px 7px rgba($color: #000000, $alpha: .3);
+
+            &.image-1 {
+                left: 17.5%;
+                transform: scale(1);
+                z-index: 4;
+            }
+
+            &.image-2 {
+                left: 27%;
+                transform: scale(0.95);
+                z-index: 3;
+            }
+
+            &.image-3 {
+                left: 36%;
+                transform: scale(0.9);
+                z-index: 2;
+            }
+
+            &.image-4 {
+                left: 45%;
+                transform: scale(0.85);
+                z-index: 1;
+            }
         }
     }
 }
