--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -138,6 +138,12 @@ footer .footer-container .container,
 }
 
 .container {
+    position: relative;
+
+    .block, .title {
+        z-index: 1;
+    }
+    
     .block {
         flex: 1 0;
     }
