Add 'classnames' package and create menu block

--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -238,4 +238,5 @@ footer .footer-container .container,
 @import "../../app/components/pages/home/elements/licences/licences.scss";
 @import "../../app/components/pages/home/elements/news/news.scss";
 @import "../../app/components/pages/home/elements/feedback/feedback.scss";
+@import "../../app/components/blocks/menu/menu.scss";
 @import "../../app/components/blocks/footer/footer.scss";
