--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -74,6 +74,7 @@ textarea:focus {
 .licences .content .context,
 .licences .content .context .logos,
 .news .content,
+.side-menu .side-menu--items .link-icon,
 footer,
 footer .footer-container,
 footer .footer-block,
