--- a/src/app/components/blocks/sideMenu/sideMenu.scss
+++ b/src/app/components/blocks/sideMenu/sideMenu.scss
@@ -50,11 +50,18 @@
     bottom: 0;
     left: 0;
     width: auto;
-    padding-top: 5%;
-    padding-left: 2%;
-    z-index: 9999;
+    padding: 7% 2%;
+    padding-right: 3%;
+    z-index: 9998;
 
     background-color: #fff;
+
+    transform: translateX(-100%);
+    transition: all .3s ease;
+
+    &.show {
+        transform: translateX(0);
+    }
 
     &--items {
         & > div {
@@ -63,6 +70,47 @@
 
         .link-icon {
             align-items: center;
+            margin: 0 0 12px;
+
+            svg {
+                width: 26px;
+                height: 26px;
+                margin-right: 18px;
+
+                color: $mainColorDark;
+            }
+
+            a {
+                font-size: 16px;
+                letter-spacing: .03em;
+                color: $titleColor;
+            }
+        }
+
+        .category {
+            margin: 32px 0;
+        }
+
+        .sub {
+            a {
+                position: relative;
+                display: block;
+                font-size: 16px;
+                letter-spacing: .03em;
+                color: #4f4f4f;
+                padding: 5px 0;
+                padding-left: 32px;
+
+                &:before {
+                    position: absolute;
+                    content: "";
+                    left: 12px;
+                    top: 0;
+                    bottom: 0;
+                    width: 2px;
+                    background-color: rgba($color: #000000, $alpha: .3);
+                }
+            }
         }
     }
 }
