Edited homepage components styles

--- a/src/app/components/pages/home/elements/services/services.scss
+++ b/src/app/components/pages/home/elements/services/services.scss
@@ -18,23 +18,26 @@
         }
 
         & > li > svg {
-            width: 45px;
-            height: 45px;
+            width: 42px;
+            height: 42px;
             color: white;
             margin: 0 0 7px;
         }
 
         & > li > .context > h3 {
-            font-size: 18px;
+            font-size: 16px;
             letter-spacing: .03em;
+            line-height: 1.4;
             color: white;
             margin: 0 0 6px;
         }
 
         & > li > .context > p {
-            font-size: 16px;
+            font-size: 14px;
+            line-height: 1.4;
             letter-spacing: .03em;
             color: #f1f1f1;
+            opacity: .8;
         }
     }
 
