--- a/src/app/components/blocks/footer/footer.scss
+++ b/src/app/components/blocks/footer/footer.scss
@@ -10,7 +10,7 @@ footer {
             margin: 0 0 7px;
 
             font-family: 'Roboto-Medium', sans-serif;
-            font-size: 18px;
+            font-size: 16px;
             color: $titleColor;
             letter-spacing: .03em;
         }
@@ -49,7 +49,8 @@ footer {
 
         .f-nav-link {
             font-family: 'Roboto-Light', sans-serif;
-            font-size: 16px;
+            font-size: 14px;
+            line-height: 1.4;
             color: $textColor;
             letter-spacing: .03em;
             margin: 0 0 6px;
@@ -69,16 +70,18 @@ footer {
             height: 100%;
             
             & > h3 {
-                margin: 0 0 11px;
-                font-size: 36px;
+                margin: 0 0 12px;
+                font-size: 32px;
                 letter-spacing: .03em;
+                line-height: 1.4;
                 color: $titleColor;
             }
 
             & > span {
                 font-family: 'Roboto-Light';
-                font-size: 16px;
+                font-size: 14px;
                 letter-spacing: .03em;
+                line-height: 1.4;
                 color: $textColor;
             }
         }
@@ -92,7 +95,7 @@ footer {
     }
 
     .copyright, .copyright span {
-        font-family: 'Roboto-Light', sans;
+        font-family: 'Roboto-Light', sans-serif;
         font-size: 14px;
         letter-spacing: .03em;
         color: $textColor;
