--- a/src/app/components/pages/home/elements/feedback/form/form.scss
+++ b/src/app/components/pages/home/elements/feedback/form/form.scss
@@ -11,9 +11,11 @@
             display: block;
         }
 
-        .label {
-            position: relative;
-            font-size: 14px;
+        label {
+            font-size: 16px;
+            letter-spacing: .03em;
+            line-height: 1.4;
+            color: #212121;
         }
 
         label > input,
@@ -29,7 +31,7 @@
             border-bottom: 1px solid rgba($color: #000000, $alpha: .4);
 
             font-family: "Roboto-Regular", sans-serif;
-            font-size: 16px;
+            font-size: 14px;
             letter-spacing: .03em;
             color: #4f4f4f;
 
@@ -59,7 +61,7 @@
             border: 1px solid rgba($color: #000000, $alpha: .4);
 
             font-family: "Roboto-Regular", sans-serif;
-            font-size: 16px;
+            font-size: 14px;
             letter-spacing: .03em;
             color: #4f4f4f
         }
