--- a/src/app/components/pages/home/elements/info/info.scss
+++ b/src/app/components/pages/home/elements/info/info.scss
@@ -31,10 +31,10 @@
             }
 
             span:last-child {
-                font-size: 16px;
+                font-size: 14px;
                 color: $textColor;
                 letter-spacing: .03em;
-                line-height: 1.5em;
+                line-height: 1.3em;
                 padding-top: 3px;
             }
         }
@@ -48,15 +48,17 @@
         margin-bottom: 42px;
 
         h2 {
-            font-size: 46px;
-            letter-spacing: .03em;   
+            font-size: 42px;
+            letter-spacing: .03em;
+            line-height: 1.4;
             color: $titleColor;
             margin: 0 0 6px;
         }
 
         span {
-            font-size: 16px;
+            font-size: 14px;
             letter-spacing: .03em;
+            line-height: 1.4;
             color: $textColor;
         }
     }
@@ -64,7 +66,7 @@
     .descriptor {
         margin-bottom: 42px;
         p {
-            font-size: 16px;
+            font-size: 14px;
             letter-spacing: .03em;
             line-height: 1.5em;
             color: $textColor;
