--- a/src/app/components/pages/home/elements/licences/licences.scss
+++ b/src/app/components/pages/home/elements/licences/licences.scss
@@ -37,10 +37,10 @@
 
     .context > .text {
         p {
-            font-size: 16px;
+            font-size: 14px;
             color: white;
-            letter-spacing: 0.03em;
-            line-height: 1.5em;
+            letter-spacing: .03em;
+            line-height: 1.4em;
 
             margin-bottom: 42px;
         }
