--- a/src/public/template/index.html
+++ b/src/public/template/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://api-maps.yandex.ru">
+    <link rel="dns-preferent" href="https://api-maps.yandex.ru">
+
     <title>Document</title>
 </head>
 <body>
     <div class="root" id="renderer"></div>
+    <script src="/scripts/yandex-maps-init.js"></script>
 </body>
 </html>
