--- a/src/app/components/pages/home/elements/product/element.scss
+++ b/src/app/components/pages/home/elements/product/element.scss
@@ -1,73 +1,115 @@
+.products .block:last-child {
+    text-align: right;
+    padding-right: 116px;
+
+    .descriptor {
+        margin-bottom: 42px;
+        max-width: 65%;
+        margin-left: auto;
+
+        p {
+            font-size: 16px;
+            letter-spacing: .03em;
+            line-height: 1.4;
+            color: $textColor;
+            margin: 0 0 6px;
+        }
+
+    }
+
+    a {
+        margin-left: auto;
+        float: right;
+    }
+
+    .dots-1 {
+        position: absolute;
+        display: block;
+        width: 255px;
+        height: 255px;
+        top: 10%;
+        right: 14.5%;
+    }
+}
+
+.products .block:first-child {
+    padding: 0 1.5%;
+}
+
+.products .flex .element {
+    flex: 1 0;
+}
+
 .products .element {
     position: relative;
     display: block;
-    margin-right: 14.5%;
-    height: 115px;
-    margin-bottom: 42px;
-    clip-path: polygon(12% 0, 100% 0, 100% 62%, 89% 100%, 0 100%, 0 40%);
+    height: 235px;
+    margin: 4px;
+    overflow: hidden;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    cursor: pointer;
 
-    .bg {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        z-index: -1;
+    transition: all .3s ease;
 
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-
-    .context {
-        position: absolute;
-        left: 42px;
-        bottom: 20px;
-        z-index: 1;
-        overflow: hidden;
-
-        span {
-            font-size: 18px;
-            letter-spacing: 0.03em;
-            color: white;
-            margin: 0 0 12px;
-        }
-
-        a {
-            font-size: 16px;
-            letter-spacing: 0.03em;
-            color: white;
-        }
-    }
-
-    &:before {
-        position: absolute;
-        content: '';
-
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-
-        opacity: 0.7;
-        z-index: 0;
-        
-        background-color: $mainColorMiddle;
-
-        transition: all .3s ease;
-    }
-
-    &:after {
-        position: absolute;
-        content: '';
-        
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
+    &.opacity {
+        opacity: .5;
     }
 
     &:hover {
         &:before {
-            background-color: $mainColorDark;
+            background-color: rgba($color: $mainColorDark, $alpha: .7);
+        }
+
+        .bg {
+            transform: scale(1.1);
+        }
+    }
+
+    &:before {
+        content: "";
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+
+        background: linear-gradient(45deg,
+            rgba($color: $mainColorDark, $alpha: .8) 0%,
+            rgba($color: $mainColorDark, $alpha: .7) 45%,
+            rgba($color: $mainColorMiddle, $alpha: .7) 100%    
+        );
+
+        transition: all .3s ease;
+    }
+
+    .bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        z-index: -1;
+
+        transition: all .5s ease;
+    }
+
+    .title {
+        position: absolute;
+        left: 7%;
+        bottom: 10%;
+        z-index: 2;
+        margin: 0;
+
+        span {
+            font-size: 16px;
+            letter-spacing: .03em;
+            line-height: 1.4;
+            color: #fff;
         }
     }
 }
