--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -85,6 +85,7 @@ textarea:focus {
 .products-list-item .block-title svg,
 .product-display,
 .product-display > .preview-list > .preview-list-item > label,
+.product-display > .display > .content,
 .expand,
 .expand .circle,
 .wrapper .files > .file,
